# baccano-font

./: LICENSE  README.md  build.py  flake.nix  justfile  pyproject.toml
.github/workflows/: cicd.yml
scripts/: check_monospaced.py  clean_glyphs.py  compare_glyphs.py  copy_glyphs.py  list_glyphs.py  patch_fonts.py  utils.py
src/: Baccano-Bold.sfd  Baccano-BoldItalic.sfd  Baccano-Italic.sfd  Baccano-Regular.sfd  Baccano.sfd
